# SeSAC-AI

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.txt  LICENSE  README.md  build.bat  build_log.txt  pyproject.toml  requirements.txt  source_pitch_wpm.csv
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
app/: config.py  crud.py  csvinput.py  db.py  emotion_analysis.py  feedback_chatbot.py  gaze_analysis.py  main.py  models.py  posture_classifier.py  s3_utils.py  schemas.py  speech_pronunciation.py  speed_analysis.py  video_processing.py  voice_hz.py
