[tool.poetry]
name = "kseb-ai"
version = "0.1.0"
description = "KSEB AI server for video analysis (emotion, gaze)."
authors = ["KSEB Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
python-multipart = "*"
boto3 = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
pydantic = "*"
python-dotenv = "*"
python-jose = "*"
moviepy = "*"
pydub = "*"
aiofiles = "*"
Pillow = "*"
opencv-python = "*"
mediapipe = "*"
deepface = "*"
tf-keras = "*"
librosa = "*"
matplotlib = "*"
scikit-learn = "*"
tensorflow = "*"
pandas = "*"
numpy = "*"
tqdm = "*"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
